<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="5dp">

    <TextView
        android:id="@+id/animalFactsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/animal_facts"
        android:textSize="24sp"
        android:layout_marginBottom="20dp"/>
    <ImageView
        android:id="@+id/factsPic"
        android:layout_below="@id/animalFactsName"
        android:layout_width="216dp"
        android:layout_height="216dp"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="10dp"
        android:src="@drawable/image1"/>
    <TextView
        android:id="@+id/subtitleText"
        android:layout_below="@+id/factsPic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/animal_subtitle"
        android:fontFamily="sans-serif-light"
        android:textStyle="italic"
        android:textSize="14sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/subtitleText"
        android:layout_marginVertical="20dp"
        android:weightSum="10">

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="@string/synopsis_text"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/lifespan"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/lifespan_text"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/size_text"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/weight_text"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/habitat"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/habitat_text"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/diet"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/diet_text"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/national"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/national_text"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/conservation"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/conservation_text"
            android:textSize="14sp"/>

    </LinearLayout>





</RelativeLayout>